--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -1,105 +1,131 @@
 {
-  "services": {
-    "title": "الخدمات السحرية",
-    "subtitle": "اطلع على ترسانتنا من <1>السحر الرقمي</1> - كل خدمة تم تشكيلها في نار الابتكار ومباركة بأكواد التميز القديمة.",
-    "items": [
-      {
-        "title": "سحر الويب",
-        "subtitle": "تطوير ويب سحري",
-        "description": "نحن ننسج تعويذات رقمية في تجارب ويب سريعة الاستجابة ومذهلة تخطف الأنفس وتحول الزوار إلى أتباع مخلصين.",
-        "features": [
-          "سحر React",
-          "إتقان Next.js",
-          "استحضار APIs",
-          "خيمياء الأداء"
-        ],
-        "magicLevel": 99
-      },
-      {
-        "title": "عرافة الجوال",
-        "subtitle": "خلق تطبيقات نبوية",
-        "description": "اصنع تطبيقات جوال قوية تتجاوز المنصات، وتحقق رؤيتك عبر الأكوان الرقمية المتعددة.",
-        "features": [
-          "سحر المنصات المتعددة",
-          "تعويذات iOS الأصلية",
-          "سحر أندرويد",
-          "فنون Flutter السحرية"
-        ],
-        "magicLevel": 96
-      },
-      {
-        "title": "تحضير الذكاء الاصطناعي",
-        "subtitle": "إيقاظ الذكاء الاصطناعي",
-        "description": "أنفخ الحياة الاصطناعية في عالمك الرقمي مع أنظمة ذكية تتعلم وتتكيف وتتطور بما يتجاوز الفهم البشري.",
-        "features": [
-          "تعلم الآلة",
-          "الشبكات العصبية",
-          "التحليلات التنبؤية",
-          "تعويذات الأتمتة"
-        ],
-        "magicLevel": 90
-      }
-    ],
-    "timeline": {
-      "title": "الطقوس المقدسة للإبداع",
-      "subtitle": "شاهد المراسم القديمة التي تتحول فيها الأفكار إلى واقع رقمي، تتبع المسار الصوفي للتحول.",
-      "steps": [
-        {
-          "title": "استحضار الرؤية",
-          "description": "ننظر إلى العالم الأثيري لالتقاط أعمق رغباتك الرقمية"
-        },
-        {
-          "title": "نسج التعويذات",
-          "description": "الخوارزميات القديمة تُنسج مع التعويذات الحديثة"
-        },
-        {
-          "title": "التجسد الرقمي",
-          "description": "رؤيتك تتشكل في العالم المادي من خلال الترميز السحري"
-        },
-        {
-          "title": "توجيه القوة",
-          "description": "يتم تعزيز الإبداع بأداء سريع البرق وقابلية توسع لا نهائية"
-        },
-        {
-          "title": "طقوس الصعود",
-          "description": "إبداعك الرقمي يرتفع ليحتل عرشه في مملكة السحابة"
-        }
+  "nav": {
+    "home": "الرئيسية",
+    "about": "من نحن",
+    "services": "خدماتنا",
+    "team": "فريقنا",
+    "contact": "اتصل بنا"
+  },
+  "title": "خدماتنا السحرية",
+  "subtitle": {
+    "part1": "اكتشف السحر وراء خبرتنا. نحن نصمم تجارب رقمية بمزيج فريد من الابتكار و",
+    "highlight": "السحر",
+    "part2": "."
+  },
+  "powerLabel": "قوة السحر",
+  "services": [
+    {
+      "title": "سحر تطوير الويب",
+      "subtitle": "إضفاء الحياة على تواجدك عبر الإنترنت بلمسة من السحر.",
+      "description": "تحول خدمة تطوير الويب لدينا أفكارك إلى مواقع ويب آسرة وعالية الأداء. نحن ننسج رموزًا معقدة مع تصاميم ساحرة لإنشاء روائع رقمية عملية ومذهلة بصريًا.",
+      "features": [
+        "تصميم متجاوب وبديهي",
+        "تعاويذ تحسين محركات البحث",
+        "تمائم بنية قابلة للتطوير",
+        "جرعات التجارة الإلكترونية"
+      ]
+    },
+    {
+      "title": "كيمياء تطبيقات الجوال",
+      "subtitle": "تحويل مفاهيمك إلى تطبيقات جوال قوية.",
+      "description": "من خلال فن كيمياء تطبيقات الجوال القديم، نصنع تطبيقات قوية وسهلة الاستخدام لجميع المنصات. من المفهوم الأولي إلى النشر النهائي، نضمن تجربة سلسة وجذابة لمستخدميك.",
+      "features": [
+        "توافق عبر المنصات",
+        "تعزيز الأداء الأصلي",
+        "إكسير واجهة المستخدم/تجربة المستخدم البديهية",
+        "تشفير البيانات الآمن"
+      ]
+    },
+    {
+      "title": "سحر الذكاء الاصطناعي والأتمتة",
+      "subtitle": "أتمتة عالمك بحلول ذكية.",
+      "description": "استغل القوة الغامضة للذكاء الاصطناعي والأتمتة. نصمم أنظمة ذكية تبسط عملياتك، وتحلل البيانات المعقدة، وتستحضر رؤى لدفع عملك إلى الأمام بكفاءة غير مسبوقة.",
+      "features": [
+        "تدريب نماذج الذكاء الاصطناعي المخصصة",
+        "نصوص أتمتة سير العمل",
+        "تحليل وتنبؤ البيانات",
+        "تكامل الروبوت الذكي"
       ]
     }
+  ],
+  "timeline": {
+    "title": "عمليتنا السحرية",
+    "subtitle": "كل إبداع عظيم يتبع تعويذة قوية. هكذا نحقق رؤاك:",
+    "steps": [
+      {
+        "title": "رؤية ثاقبة",
+        "desc": "نبدأ بالنظر في الكرة البلورية لطموحاتك، وفهم احتياجاتك الفريدة ورؤاك الكبرى لوضع الأساسات الغامضة."
+      },
+      {
+        "title": "تعويذة التصميم",
+        "desc": "يستحضر مصممونا الماهرون واجهات مستخدم آسرة وتجارب مستخدم ساحرة، مما يضمن أن يكون عالمك الرقمي جميلًا وبديهيًا."
+      },
+      {
+        "title": "إلقاء تعويذة التطوير",
+        "desc": "باستخدام لفائف الكود القديمة والأطر الحديثة، ينسج مطورونا تعاويذ قوية، محولين التصاميم إلى حلول وظيفية ومتينة بالكامل."
+      },
+      {
+        "title": "طقوس ضمان الجودة",
+        "desc": "قبل الكشف عن إبداعاتنا، نؤدي طقوس اختبار صارمة لطرد جميع الأخطاء والعيوب، مما يضمن تجربة مستخدم خالية من العيوب وساحرة."
+      },
+      {
+        "title": "الإطلاق الكبير وما بعده",
+        "desc": "لحظة الحقيقة! ننظم إطلاقًا رائعًا، يتبعه دعم مستمر وتحسين لضمان ازدهار إرثك الرقمي إلى الأبد."
+      }
+    ]
   },
-
   "contact": {
-    "title": "تواصل معنا",
-    "description": "تواصل مع فريقنا الخبير من خلال وسيلة الاتصال المفضلة لديك. نحن هنا لمساعدتك في تحقيق أهدافك.",
+
+  "contactUs": "اتصل بنا",
+  "whatsappTitle": "الدردشة عبر واتساب",
+  "phoneTitle": "اتصل بنا",
+  "emailTitle": "أرسل بريدًا إلكترونيًا",
     "getInTouch": "تواصل معنا",
-    "card": {
-      "name": "تواصل معنا"
+    "connectWithTeam": "تواصل مع فريقنا الخبير من خلال قناة الاتصال المفضلة لديك. نحن هنا لمساعدتك في تحقيق أهدافك.",
+    "whatsappChat": "دردشة واتساب",
+    "phoneCall": "مكالمة هاتفية",
+    "sendEmail": "إرسال بريد إلكتروني",
+    "readyToConnect": "هل أنت مستعد للتواصل معنا؟",
+    "whatsappDescription": "المراسلة الفورية للحصول على ردود سريعة واتصال في الوقت الحقيقي",
+    "phoneDescription": "اتصال صوتي مباشر للحصول على مساعدة فورية",
+    "emailDescription": "مراسلات مفصلة للاستفسارات المعقدة"
+  },
+  "Get in touch": "تواصل معنا",
+  "footer": {
+    "logoAlt": "شعار كودارايز",
+    "copyright": "© 2025 كودارايز. جميع الحقوق محفوظة",
+    "tagline": "نرتقى من خلال الكود"
+  },
+  "hero": {
+    "ariaLabel": "قسم البطل",
+    "title": "نحن نرتقي من خلال الكود",
+    "subtitle": "نبني المستقبل الرقمي ببرمجة سحرية",
+    "primaryButton": "ابدأ رحلتك",
+    "secondaryButton": "شاهد سحرنا"
+  },
+  "servicess": {
+    "title": "خدماتنا السحرية",
+    "subtitle": "نقدم مجموعة كاملة من الخدمات الرقمية لمساعدة عملك على الارتقاء إلى آفاق جديدة",
+    "webDev": {
+      "title": "تطوير الويب",
+      "description": "مواقع ويب حديثة وسريعة الاستجابة مبنية بأحدث التقنيات"
+    },
+    "mobileApps": {
+      "title": "تطبيقات الجوال",
+      "description": "تطبيقات جوال أصلية ومتعددة المنصات تسحر المستخدمين"
+    },
+    "uiUx": {
+      "title": "تصميم واجهة المستخدم",
+      "description": "تصاميم جمية وبديهية تخلق تجارب مستخدم سحرية"
+    },
+    "customSolutions": {
+      "title": "حلول مخصصة",
+      "description": "حلول برمجية مصممة خصيصًا لتلائم احتياجاتك الفريدة"
     }
   },
-  "modal": {
-    "body": "هل أنت مستعد للتواصل معنا؟",
-    "whatsapp": {
-      "title": "محادثة واتساب"
-    },
-    "call": {
-      "title": "مكالمة هاتفية"
-    },
-    "email": {
-      "title": "إرسال بريد إلكتروني"
-    }
-  },
-  "card": {
-    "whatsapp": {
-      "title": "محادثة واتساب",
-      "description": "رسائل فورية لاستجابات سريعة وتواصل مباشر"
-    },
-    "call": {
-      "title": "مكالمة هاتفية",
-      "description": "تواصل صوتي مباشر للمساعدة الفورية"
-    },
-    "email": {
-      "title": "أرسل بريدًا إلكترونيًا",
-      "description": "مراسلات مفصلة للاستفسارات المعقدة"
-    }
+  "team": {
+    "title": "تعرف على فريقنا",
+    "description": "مطورون طموحون وشباب مستعدون لتحويل أفكارك إلى واقع رقمي"
   }
+ 
 }
